--- a/index.mustache
+++ b/index.mustache
@@ -5,7 +5,7 @@
     <meta name="date" content="{{meta_date}}" />
     <meta property="og:title" content="Language details of the Firefox repo" />
     <meta property="og:description" content="How much Rust in Firefox?" />
-    <meta property="og:url" content="https://4e6.github.io/firefox-lang-stats/" />
+    <meta property="og:url" content="https://geekcornergh.github.io/firefox-lang-stats/" />
     <meta property="og:image" content="rustacean-orig-noshadow.png" />
     <link rel="shortcut icon" href="rustacean-orig-noshadow.ico" type="image/x-icon" />
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -33,7 +33,7 @@
     </script>
   </head>
   <body>
-    <a href="https://github.com/4e6/firefox-lang-stats"><img style="position: absolute; top: 0; left: 0; border: 0; z-index:100;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/geekcornergh/firefox-lang-stats"><img style="position: absolute; top: 0; left: 0; border: 0; z-index:100;" src="https://github.blog/wp-content/uploads/2008/12/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
     <div style="margin-left: 150px">
       <h2>How much Rust in Firefox?</h2>
       <p><a href="https://github.com/mozilla-firefox/firefox">mozilla-firefox/firefox</a> repository statistics on {{title_date}}</p>
